--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<meta property="og:title" content="Slim Kanji" />
+        <meta property="og:description" content="SvelteKit, Prisma, and OpenAI" />
 		<meta property="og:image" content="%sveltekit.assets%/sk.png" />
 		%sveltekit.head%
 	</head>
