--- a/src/app.html
+++ b/src/app.html
@@ -5,9 +5,9 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<title>Slim Kanji</title>
-		<meta name="description" content="SvelteKit, Prisma, and OpenAI"/>
-		<meta property="og:title" content="Slim Kanji" />
-        <meta property="og:description" content="SvelteKit, Prisma, and OpenAI" />
+		<meta name="description" content="AI-powered Tools for Learning Japanese"/>
+		<meta property="og:title" content="Toroben" />
+        <meta property="og:description" content="AI-powered Tools for Learning Japanese" />
 		<meta property="og:image" content="%sveltekit.assets%/sk.png" />
 		%sveltekit.head%
 	</head>
