--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
-		<title>Slim Kanji</title>
+		<title>Toruben</title>
 		<meta name="description" content="AI-powered Tools for Learning Japanese"/>
 		<meta property="og:title" content="Toroben" />
         <meta property="og:description" content="AI-powered Tools for Learning Japanese" />
